--- a/_posts/2020-08-04-Session-2.md
+++ b/_posts/2020-08-04-Session-2.md
@@ -9,12 +9,14 @@ author: Richard Stock
 ### Aug 4, 2020 (9:30 am - 10:00 am)
 ---
 
+[Video](https://youtu.be/am_fsg75qT4)
+
 Questions for Mo:
 
 1. Would I be able to have access to these sessions for my reference/learning?  
     > Yes - YouTube for now, later maybe Twitch (advantage if it auto uploads)
 2. Ergonomics: how to maintain back & wrists (standing desk / stretch/walk breaks, what features are necessary in a chair, other - wrist pads, etc)
-    > Herman Miller chair, Jarvis standing desk, PC tower on floor.  Can be creative with a laptop and use different work station setups (standing at kitchen counter).  Eye level, keyboard is important - Microsoft Natural Ergonomic 4000.  Split keyboard.  Typing proficiency - consistent keyboard is important.  JP had one he would pull out like a katana.  
+    > Herman Miller chair, Jarvis standing desk, PC tower on floor.  Can be creative with a laptop and use different work station setups (standing at kitchen counter).  Eye level, keyboard is important - Microsoft Natural Ergonomic 4000.  Split keyboard.  Typing proficiency - consistent keyboard is important.  JP had one he always kept with him in his backpack. 
 3. Computer & OS:  a) Windows vs Mac, b) Linux, Unix, Ubuntu, etc.
     > (See detailed discussion on video).  3 types of OS - Windows, Linux, DSL.  Linux is most common in Web Development world, so Mo recommends the more I learn about it, the better it may be for my career.  There are several Linux OS lineages, of which Debian is most common - of which the Ubuntu OS is most common (Install Ubuntu 20.04).  Mo runs Fedora 10, which is under the RedHat lineage, but recommends Ubuntu for beginners as it has more support and less chance of missing a package.   Advantages of Linux is that it is more customizable, and it has all the tools that developers need.
 4. Workbench:  Best of:  a) text editors, b) IDE c) other software
