--- a/_posts/2020-08-18-conv-git.md
+++ b/_posts/2020-08-18-conv-git.md
@@ -1,8 +1,8 @@
 ---
 title: Conversation about Git
 date: 2020-08-18
-categories: [Sessions]
-tags: []     # TAG names should always be lowercase
+categories: [Conversations]
+tags: [git]     # TAG names should always be lowercase
 author: Richard Stock
 ---
 
