inserted videos including video timestamps in rwx4

--- a/_posts/2020-07-28-pro_club-1.md
+++ b/_posts/2020-07-28-pro_club-1.md
@@ -10,6 +10,10 @@ author: Richard Stock
 ---
 *(watched video @ Starbucks)*
 
+<iframe width="800" height="450" src="https://www.youtube.com/embed/oFArZXJ65RI?&cc_load_policy=1&start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
+
 ### Session Goal 
 
 To create a baseline of understanding.  Using C, as many languages are derived from C. 
@@ -31,7 +35,7 @@ To create a baseline of understanding.  Using C, as many languages are derived f
 - In programming, you very rarely build code from scratch, you build upon other people’s libraries and code. 
 - There are quite a few layers of translation between high level languages and machine code.  Different computers will translate high level code into different machine code depending on the processor it’s running and the OS.  Windows 32 bit processor will have a different set of 0’s and 1’s than a Mac OS.
 - There isn’t a language which is the best language, they all have unique characteristics which make them powerful.
-- In a browser (Chrome, Firefox) - you can open the dev tools (developer tools).  You can use this as a development environment.  It is a REPL. `[17:30]`
+- In a browser (Chrome, Firefox) - you can open the dev tools (developer tools).  You can use this as a development environment.  It is a REPL. **[`17:25`](https://youtu.be/oFArZXJ65RI?t=1045)**
 
 ***Question***:  when you changed the website’s background to pink, and the title to “Mo’s News”, did it do that only for you, or for the whole internet?
 
