--- a/_posts/2020-07-28-pro_club-2.md
+++ b/_posts/2020-07-28-pro_club-2.md
@@ -10,6 +10,10 @@ author: Richard Stock
 ---
 *(watched video @ Starbucks)*
 
+<iframe width="800" height="450" src="https://www.youtube.com/embed/8g__hsJ1taI?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
+
 ### Main Topic
 
 Arrays & Loops
