--- a/_posts/2020-07-28-pro_club-3.md
+++ b/_posts/2020-07-28-pro_club-3.md
@@ -10,6 +10,10 @@ author: Richard Stock
 ---
 *(watched video @ Starbucks)*
 
+<iframe width="800" height="450" src="https://www.youtube.com/embed/T_YL0vk7xac?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
+
 ### Main Topic  
 
 Conditional Logic
@@ -23,4 +27,4 @@ Conditional Logic
 - Lie Detector Test (conditional logic) - IF, ELSE, AND, OR `(&&, ||)`
 - Can assign logic conditions to variables (ex: `int x = vacation_days > 5;`)
 - Ruby: can use `unless` (equivalent to “if false”)
-- Switch statement: use when there are multiple cases (ex: age - 30, 35, 40, 45, 50, 55, 60), plus a default (everything else)
+- `Switch` statement: use when there are multiple cases (ex: age - 30, 35, 40, 45, 50, 55, 60), plus a default (everything else)
