--- a/_posts/2020-08-04-RWX-1.md
+++ b/_posts/2020-08-04-RWX-1.md
@@ -40,6 +40,8 @@ always willing to learn and adapt to more of a "blog" style.*
 
 > I like point form. It works for me.
  
-***Execute***:  Currently working on installing Ubuntu 20.04 LTS onto my PC, & I will install Git as soon as I have that up and running.
+***Execute***:  
+
+Currently working on installing Ubuntu 20.04 LTS onto my PC, & I will install Git as soon as I have that up and running.
 
 > Well done! rwx: accomplished!
