--- a/_posts/2020-08-04-Session-2.md
+++ b/_posts/2020-08-04-Session-2.md
@@ -6,10 +6,12 @@ tags: []     # TAG names should always be lowercase
 author: Richard Stock
 ---
 
-### Aug 4, 2020 (9:30 am - 10:00 am)
+### Aug 4, 2020 (9:30 am - 10:15 am)
 ---
 
-[Video](https://youtu.be/am_fsg75qT4)
+<iframe width="800" height="450" src="https://www.youtube.com/embed/am_fsg75qT4?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
 
 Questions for Mo:
 
