--- a/_posts/2020-08-11-Session-4.md
+++ b/_posts/2020-08-11-Session-4.md
@@ -2,12 +2,14 @@
 title: Session 4
 date: 2020-08-11
 categories: [Sessions]
-tags: []     # TAG names should always be lowercase
+tags: [GitLab]     # TAG names should always be lowercase
 author: Richard Stock
 ---
 
 ### Aug 11, 2020 (9:30 am - 10:00 am)
 ---
+
+<iframe width="800" height="450" src="https://www.youtube.com/embed/tZBuYMj5abE?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 - Git Book - copy of the repository hosted on GitLab.
 - I have to create a gitlab account and let Mo know the handle.
