--- a/_posts/2020-08-12-pro_club-6.md
+++ b/_posts/2020-08-12-pro_club-6.md
@@ -9,6 +9,10 @@ author: Richard Stock
 ---
 *(attended live)*
 
+<iframe width="800" height="450" src="https://www.youtube.com/embed/6ymu3h99-Wg?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
+
 ### Main Topic
 
 - Test Driven Design
