--- a/_posts/2020-08-13-Session-5.md
+++ b/_posts/2020-08-13-Session-5.md
@@ -2,12 +2,16 @@
 title: Session 5
 date: 2020-08-13
 categories: [Sessions]
-tags: []     # TAG names should always be lowercase
+tags: [git]     # TAG names should always be lowercase
 author: Richard Stock
 ---
 
 ### Aug 13, 2020 (9:30 am - 10:00 am)
 ---
+
+<iframe width="800" height="450" src="https://www.youtube.com/embed/vljJ7xwi-w8?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
 
 - Question:  I couldn’t get Vim to accept my git commit message when pressing return, so i had to use :q and then it failed to commit due to empty commit message, and then i used “-m” and manually did it.
 - Terminal shortcuts for git (ex “lga”) - are they configured in your gitconfig file?
