--- a/_posts/2020-08-25-Session-8.md
+++ b/_posts/2020-08-25-Session-8.md
@@ -1,12 +1,12 @@
 ---
-title: Session 8
+title: Session 8 - Cirriculum Update (Create a Web App)
 date: 2020-08-25
 categories: [Sessions]
 tags: []     # TAG names should always be lowercase
 author: Richard Stock
 ---
 
-### Curriculum Update: Design a Web Application
+### Overview
 ---
 
 We want to line up closely with way JP prefers to approach development.  Goal is getting product in user’s hands as fast as possible.  Ability to go “top down” (using a tool chain on UI side - high marketability while capitalizing on Mo's experience with backend).
@@ -24,14 +24,15 @@ Mo:  Just go.  Just start, that’s the best way, sometimes the hardest part.
 
 JP:  get us set up with "Jere-Ticket?" with PR’s etc. 
 
-We will use Shape Up Process from 37 signals - 6 week cycle - betting table - things get cut - have to actively fight for features that get voted up. 
+We will use **"Shape Up Process"** from 37 signals - 6 week cycle - betting table - things get cut - have to actively fight for features that get voted up. 
 
 Start reading this book:
 https://basecamp.com/shapeup/webbook
 
 It's a very good process:  JP has done Lean, have done Agile, but is now waiting for the process that will replace Shape Up (never going to go back to those Lean or Agile).
 
-**Next Steps:**
+### Next Steps
+---
 
 - This will be my product. Repo should be owned by Richard, because it’s my Intellectual Property.  Do it under my GitHub account.  They will fork to my repo (Mo/JP), and do PR’s there.  
 - Do wire frames.
