--- a/_posts/2020-07-29-pro_club-4.md
+++ b/_posts/2020-07-29-pro_club-4.md
@@ -10,6 +10,10 @@ author: Richard Stock
 ---
 *(attended live)*
 
+<iframe width="800" height="450" src="https://www.youtube.com/embed/vevj9AWOP_s?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
+
 ### Main Topic
 
 Functions
