--- a/_posts/2020-08-06-Session-3.md
+++ b/_posts/2020-08-06-Session-3.md
@@ -2,11 +2,18 @@
 title: Session 3
 date: 2020-08-06
 categories: [Sessions]
-tags: []     # TAG names should always be lowercase
+tags: [GitLab]     # TAG names should always be lowercase
 author: Richard Stock
 ---
 
 ### Aug 6, 2020 (9:30 am - 10:00 am)
+---
+
+<iframe width="800" height="450" src="https://www.youtube.com/embed/nf5bQUlAfhw?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
+
+### GitLab
 ---
 
 - Man pages - each section is written towards a different audience.  
