--- a/_posts/2020-08-19-pro_club-7.md
+++ b/_posts/2020-08-19-pro_club-7.md
@@ -9,6 +9,10 @@ author: Richard Stock
 ---
 *(attended live)*
 
+<iframe width="800" height="450" src="https://www.youtube.com/embed/frf7VgTNTTA?start=11" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
+
 ### Main Topic
 
 - 
