add wireframe page & update workspace

--- a/_posts/2020-08-04-RWX-1.md
+++ b/_posts/2020-08-04-RWX-1.md
@@ -31,10 +31,7 @@ Below is today's 'rwx':
 - Git has hash's that uniquely identify each change a dev makes.
 - There are 3 workflow states - Modified, Staged (indexed), and Committed.  You can be selective in what modifications are actually committed, hence the "staging area" - or you can skip the staging area.
 
-*Note:  I've never blogged before or really journaled in the past.  However I've always been a fairly diligent note taker when
-learning, so my writing style has been very "bullet point", distilling information that I view as essential for later
-reference.  Wondering if you could let me know what writing style you'd like to see when I get my website blog set up?  I'm
-always willing to learn and adapt to more of a "blog" style.*
+*Note:  I've never blogged before or really journaled in the past.  However I've always been a fairly diligent note taker when learning, so my writing style has been very "bullet point", distilling information that I view as essential for later reference.  Wondering if you could let me know what writing style you'd like to see when I get my website blog set up?  I'm always willing to learn and adapt to more of a "blog" style.*
 
 > I'm to the point with my note taking as well. These notes are for you. So write for your audience. Through daily practice you will find your voice. Reading will also influence your preferred writing style.
 
